# evbpacker-skill

./: .gitignore  README.md
.claude/skills/evb-pack/: SKILL.md
.claude/skills/evb-pack/scripts/: build.py
tests/: Cargo.toml  config.json  run_tests.py
tests/src/: cli_test.rs  config_test.rs  main.rs  registry_test.rs
